--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -40,12 +40,12 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.basicplayer3.0.jar}:\
-    ${file.reference.commons-logging-api.jar}:\
-    ${file.reference.hsqldb.jar}:\
-    ${file.reference.jid3lib-0.5.4.jar}:\
     ${file.reference.jl1.0.jar}:\
     ${file.reference.mp3spi1.9.4.jar}:\
     ${file.reference.quaqua.jar}:\
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.commons-logging-api.jar}:\
+    ${file.reference.jid3lib-0.5.4.jar}:\
     ${file.reference.tritonus_share.jar}:\
     ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
@@ -73,7 +73,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=com.JPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
