--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -87,6 +87,6 @@ run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
-source.encoding=UTF-8
+source.encoding=ISO-8859-1
 src.src.dir=src
 test.src.dir=${file.reference.JPlayer-test}
