Incluido Opcao de Organizar Musicas Nas Pastas. Escolher pasta destinho, e ao incluir as musicas o sistema tentara mover os arquivos para esta pasta / artista/album
Incluido Opcao de baixar capa.
ao ver que uma musica nao tem capa, o sistema fara uma busca no google e baixara uma imagem para
esta musica.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,11 @@ endorsed.classpath=
 excludes=
 file.reference.basicplayer3.0.jar=lib/basicplayer3.0.jar
 file.reference.commons-logging-api.jar=lib/commons-logging-api.jar
+file.reference.gsearch-java-client.jar=lib/gsearch-java-client.jar
+file.reference.gson-1.5.jar=lib/gson-1.5.jar
 file.reference.hsqldb.jar=lib/hsqldb.jar
+file.reference.httpclient-4.0.1.jar=lib/httpclient-4.0.1.jar
+file.reference.httpcore-4.0.1.jar=lib/httpcore-4.0.1.jar
 file.reference.jid3lib-0.5.4.jar=lib/jid3lib-0.5.4.jar
 file.reference.jl1.0.jar=lib/jl1.0.jar
 file.reference.JPlayer-src=src
@@ -47,7 +51,11 @@ javac.classpath=\
     ${file.reference.commons-logging-api.jar}:\
     ${file.reference.jid3lib-0.5.4.jar}:\
     ${file.reference.tritonus_share.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.gsearch-java-client.jar}:\
+    ${file.reference.httpclient-4.0.1.jar}:\
+    ${file.reference.gson-1.5.jar}:\
+    ${file.reference.httpcore-4.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
