--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ file.reference.hsqldb.jar=lib/hsqldb.jar
 file.reference.httpclient-4.0.1.jar=lib/httpclient-4.0.1.jar
 file.reference.httpcore-4.0.1.jar=lib/httpcore-4.0.1.jar
 file.reference.jid3lib-0.5.4.jar=lib/jid3lib-0.5.4.jar
+file.reference.jintellitype-1.3.4.jar=lib/jintellitype-1.3.4.jar
 file.reference.jl1.0.jar=lib/jl1.0.jar
 file.reference.JPlayer-src=src
 file.reference.JPlayer-test=test
@@ -41,7 +42,7 @@ file.reference.mp3spi1.9.4.jar=lib/mp3spi1.9.4.jar
 file.reference.quaqua.jar=lib/quaqua.jar
 file.reference.tritonus_share.jar=lib/tritonus_share.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.basicplayer3.0.jar}:\
     ${file.reference.jl1.0.jar}:\
@@ -55,7 +56,8 @@ javac.classpath=\
     ${file.reference.gsearch-java-client.jar}:\
     ${file.reference.httpclient-4.0.1.jar}:\
     ${file.reference.gson-1.5.jar}:\
-    ${file.reference.httpcore-4.0.1.jar}
+    ${file.reference.httpcore-4.0.1.jar}:\
+    ${file.reference.jintellitype-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
