--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,14 @@ file.reference.httpcore-4.0.1.jar=lib/httpcore-4.0.1.jar
 file.reference.jid3lib-0.5.4.jar=lib/jid3lib-0.5.4.jar
 file.reference.jintellitype-1.3.4.jar=lib/jintellitype-1.3.4.jar
 file.reference.jl1.0.jar=lib/jl1.0.jar
+file.reference.jogg-0.0.7.jar=lib/jogg-0.0.7.jar
+file.reference.jorbis-0.0.15.jar=lib/jorbis-0.0.15.jar
 file.reference.JPlayer-src=src
 file.reference.JPlayer-test=test
 file.reference.mp3spi1.9.4.jar=lib/mp3spi1.9.4.jar
 file.reference.quaqua.jar=lib/quaqua.jar
 file.reference.tritonus_share.jar=lib/tritonus_share.jar
+file.reference.vorbisspi1.0.3.jar=lib/vorbisspi1.0.3.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -57,7 +60,10 @@ javac.classpath=\
     ${file.reference.httpclient-4.0.1.jar}:\
     ${file.reference.gson-1.5.jar}:\
     ${file.reference.httpcore-4.0.1.jar}:\
-    ${file.reference.jintellitype-1.3.4.jar}
+    ${file.reference.jintellitype-1.3.4.jar}:\
+    ${file.reference.jogg-0.0.7.jar}:\
+    ${file.reference.jorbis-0.0.15.jar}:\
+    ${file.reference.vorbisspi1.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,6 +85,8 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.basicplayer3.0.jar=docs/BasicPlayer
+javadoc.reference.jl1.0.jar=docs/jLayer
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
