--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,8 +31,6 @@ file.reference.commons-logging-api.jar=lib/commons-logging-api.jar
 file.reference.gsearch-java-client.jar=lib/gsearch-java-client.jar
 file.reference.gson-1.5.jar=lib/gson-1.5.jar
 file.reference.hsqldb.jar=lib/hsqldb.jar
-file.reference.httpclient-4.0.1.jar=lib/httpclient-4.0.1.jar
-file.reference.httpcore-4.0.1.jar=lib/httpcore-4.0.1.jar
 file.reference.jid3lib-0.5.4.jar=lib/jid3lib-0.5.4.jar
 file.reference.jintellitype-1.3.4.jar=lib/jintellitype-1.3.4.jar
 file.reference.jl1.0.jar=lib/jl1.0.jar
@@ -40,7 +38,7 @@ file.reference.jogg-0.0.7.jar=lib/jogg-0.0.7.jar
 file.reference.jorbis-0.0.15.jar=lib/jorbis-0.0.15.jar
 file.reference.JPlayer-src=src
 file.reference.JPlayer-test=test
-file.reference.mp3spi1.9.4.jar=lib/mp3spi1.9.4.jar
+file.reference.mp3spi1.9.5.jar=lib/mp3spi1.9.5.jar
 file.reference.quaqua.jar=lib/quaqua.jar
 file.reference.tritonus_share.jar=lib/tritonus_share.jar
 file.reference.vorbisspi1.0.3.jar=lib/vorbisspi1.0.3.jar
@@ -49,23 +47,20 @@ jar.compress=true
 javac.classpath=\
     ${file.reference.basicplayer3.0.jar}:\
     ${file.reference.jl1.0.jar}:\
-    ${file.reference.mp3spi1.9.4.jar}:\
     ${file.reference.quaqua.jar}:\
     ${file.reference.hsqldb.jar}:\
     ${file.reference.commons-logging-api.jar}:\
     ${file.reference.jid3lib-0.5.4.jar}:\
     ${file.reference.tritonus_share.jar}:\
-    ${libs.beans-binding.classpath}:\
     ${file.reference.gsearch-java-client.jar}:\
-    ${file.reference.httpclient-4.0.1.jar}:\
     ${file.reference.gson-1.5.jar}:\
-    ${file.reference.httpcore-4.0.1.jar}:\
     ${file.reference.jintellitype-1.3.4.jar}:\
     ${file.reference.jogg-0.0.7.jar}:\
     ${file.reference.jorbis-0.0.15.jar}:\
-    ${file.reference.vorbisspi1.0.3.jar}
+    ${file.reference.vorbisspi1.0.3.jar}:\
+    ${file.reference.mp3spi1.9.5.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-g
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
@@ -87,6 +82,7 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.reference.basicplayer3.0.jar=docs/BasicPlayer
 javadoc.reference.jl1.0.jar=docs/jLayer
+javadoc.reference.mp3spi1.9.5.jar=docs/mp3spi1.9.5_docs.zip
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -107,5 +103,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=ISO-8859-1
+source.reference.mp3spi1.9.5.jar=docs/mp3spi1.9.5_src.zip
 src.src.dir=src
 test.src.dir=${file.reference.JPlayer-test}
