--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Crepz-PLayer
@@ -60,7 +61,7 @@ javac.classpath=\
     ${file.reference.vorbisspi1.0.3.jar}:\
     ${file.reference.mp3spi1.9.5.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=-g
+javac.compilerargs=-g -Xlint:deprecation
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
