--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -32,6 +32,7 @@ file.reference.commons-logging-api.jar=lib/commons-logging-api.jar
 file.reference.gsearch-java-client.jar=lib/gsearch-java-client.jar
 file.reference.gson-1.5.jar=lib/gson-1.5.jar
 file.reference.hsqldb.jar=lib/hsqldb.jar
+file.reference.java-getopt-1.0.9.jar=lib/java-getopt-1.0.9.jar
 file.reference.jid3lib-0.5.4.jar=lib/jid3lib-0.5.4.jar
 file.reference.jintellitype-1.3.4.jar=lib/jintellitype-1.3.4.jar
 file.reference.jl1.0.jar=lib/jl1.0.jar
@@ -59,7 +60,9 @@ javac.classpath=\
     ${file.reference.jogg-0.0.7.jar}:\
     ${file.reference.jorbis-0.0.15.jar}:\
     ${file.reference.vorbisspi1.0.3.jar}:\
-    ${file.reference.mp3spi1.9.5.jar}
+    ${file.reference.mp3spi1.9.5.jar}:\
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.java-getopt-1.0.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-g -Xlint:deprecation
 javac.deprecation=false
