--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,15 +41,15 @@ file.reference.jorbis-0.0.15.jar=lib/jorbis-0.0.15.jar
 file.reference.JPlayer-src=src
 file.reference.JPlayer-test=test
 file.reference.mp3spi1.9.5.jar=lib/mp3spi1.9.5.jar
-file.reference.quaqua.jar=lib/quaqua.jar
 file.reference.tritonus_share.jar=lib/tritonus_share.jar
 file.reference.vorbisspi1.0.3.jar=lib/vorbisspi1.0.3.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.basicplayer3.0.jar}:\
     ${file.reference.jl1.0.jar}:\
-    ${file.reference.quaqua.jar}:\
     ${file.reference.hsqldb.jar}:\
     ${file.reference.commons-logging-api.jar}:\
     ${file.reference.jid3lib-0.5.4.jar}:\
@@ -91,6 +91,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=com.main.Carregador
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
