Conversão da codificação do projeto para UTF-8; Alteração da imagem de fundo da tela sobre para o logo da "vaquinha"; Troca de alguns instanceof por xxx.getclass() == XXX.class onde não era necessário testar as superclasses.

--- a/src/com/hotkey/linux/Crepz Player.desktop
+++ b/src/com/hotkey/linux/Crepz Player.desktop
@@ -2,7 +2,7 @@
 [Desktop Entry]
 Name=Crepz Player
 GenericName=Crepz Player
-Comment=Crepz Player - Um reprodutor de Ã¡udio em java.
+Comment=Crepz Player - Um reprodutor de _til_a_¡udio em java.
 Exec=/home/rudieri/aplicativos/CrepzPlayer/open_crepz.sh
 Icon=/home/rudieri/aplicativos/CrepzPlayer/com/img/icon.png
 Terminal=false
