--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -61,7 +61,6 @@ javac.classpath=\
     ${file.reference.jorbis-0.0.15.jar}:\
     ${file.reference.vorbisspi1.0.3.jar}:\
     ${file.reference.mp3spi1.9.5.jar}:\
-    ${libs.beans-binding.classpath}:\
     ${file.reference.java-getopt-1.0.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-g -Xlint:deprecation
@@ -72,9 +71,7 @@ javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -115,7 +112,7 @@ run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
-source.encoding=ISO-8859-1
+source.encoding=UTF-8
 source.reference.mp3spi1.9.5.jar=docs/mp3spi1.9.5_src.zip
 src.src.dir=src
 test.src.dir=${file.reference.JPlayer-test}
