--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -6,7 +6,7 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 application.title=Crepz-PLayer
 application.vendor=manchini
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form,**/*.sql
+build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -31,9 +31,9 @@ file.reference.basicplayer3.0.jar=lib/basicplayer3.0.jar
 file.reference.commons-logging-api.jar=lib/commons-logging-api.jar
 file.reference.gsearch-java-client.jar=lib/gsearch-java-client.jar
 file.reference.gson-1.5.jar=lib/gson-1.5.jar
-file.reference.hsqldb.jar=lib/hsqldb.jar
+file.reference.httpclient-4.2.5.jar=lib/httpclient-4.2.5.jar
+file.reference.httpcore-4.2.4.jar=lib/httpcore-4.2.4.jar
 file.reference.java-getopt-1.0.9.jar=lib/java-getopt-1.0.9.jar
-file.reference.jid3lib-0.5.4.jar=lib/jid3lib-0.5.4.jar
 file.reference.jintellitype-1.3.4.jar=lib/jintellitype-1.3.4.jar
 file.reference.jl1.0.jar=lib/jl1.0.jar
 file.reference.jogg-0.0.7.jar=lib/jogg-0.0.7.jar
@@ -49,19 +49,20 @@ jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.basicplayer3.0.jar}:\
-    ${file.reference.jl1.0.jar}:\
-    ${file.reference.hsqldb.jar}:\
     ${file.reference.commons-logging-api.jar}:\
-    ${file.reference.jid3lib-0.5.4.jar}:\
     ${file.reference.gsearch-java-client.jar}:\
     ${file.reference.gson-1.5.jar}:\
-    ${file.reference.tritonus_share.jar}:\
+    ${file.reference.httpclient-4.2.5.jar}:\
+    ${file.reference.httpcore-4.2.4.jar}:\
+    ${file.reference.java-getopt-1.0.9.jar}:\
     ${file.reference.jintellitype-1.3.4.jar}:\
+    ${file.reference.jl1.0.jar}:\
     ${file.reference.jogg-0.0.7.jar}:\
     ${file.reference.jorbis-0.0.15.jar}:\
-    ${file.reference.vorbisspi1.0.3.jar}:\
     ${file.reference.mp3spi1.9.5.jar}:\
-    ${file.reference.java-getopt-1.0.9.jar}
+    ${file.reference.tritonus_share.jar}:\
+    ${file.reference.vorbisspi1.0.3.jar}:\
+    ${reference.JID3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-g -Xlint:deprecation
 javac.deprecation=false
@@ -71,7 +72,8 @@ javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.swing-layout.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -102,6 +104,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.JID3=../../JID
+reference.JID3.jar=${project.JID3}/dist/JID3.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
