--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -34,6 +34,7 @@ file.reference.gson-1.5.jar=lib/gson-1.5.jar
 file.reference.httpclient-4.2.5.jar=lib/httpclient-4.2.5.jar
 file.reference.httpcore-4.2.4.jar=lib/httpcore-4.2.4.jar
 file.reference.java-getopt-1.0.9.jar=lib/java-getopt-1.0.9.jar
+file.reference.jid3lib-0.5.4.jar=lib/jid3lib-0.5.4.jar
 file.reference.jintellitype-1.3.4.jar=lib/jintellitype-1.3.4.jar
 file.reference.jl1.0.jar=lib/jl1.0.jar
 file.reference.jogg-0.0.7.jar=lib/jogg-0.0.7.jar
@@ -62,7 +63,7 @@ javac.classpath=\
     ${file.reference.mp3spi1.9.5.jar}:\
     ${file.reference.tritonus_share.jar}:\
     ${file.reference.vorbisspi1.0.3.jar}:\
-    ${reference.JID3.jar}
+    ${file.reference.jid3lib-0.5.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-g -Xlint:deprecation
 javac.deprecation=false
@@ -104,8 +105,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.JID3=../../JID
-reference.JID3.jar=${project.JID3}/dist/JID3.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
